perf(agent): 主对话链路去阻塞
经验匹配/意图识别/能力预发现/决策信号一律改为后台增强，不再占用主对话等待时间：experience-match-timeout-ms 与 decision-signal-timeout-ms 归零、前台等待封顶 80ms、后台超时 1200ms 后放弃并中断；能力预发现只走规则化快路径不调 LLM；超长输入只抽头尾探针；L4 意图匹配默认关闭。

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>